[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bytes = "1"
color-eyre = "0.6"
envfury = "0.2"
http = "1"
mr-mime = "0.1"
strum = "0.26"
thiserror = "1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
xitca-web = { version = "0.5", default-features = false }

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
