[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bytes = "1"
color-eyre = "0.6"
convert_case = "0.7.1"
envfury = "0.2"
file-format = "0.26"
html5ever = "0.29.1"
http = "1"
http-serde = "2"
indoc = "2"
markup5ever_rcdom = "0.5.0-unofficial"
mr-mime = "0.1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
strum = "0.27.1"
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
xitca-web = { version = "0.6", default-features = false }

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
