[package]
name = "json-env-cfg"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
convert_case = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
