[package]
name = "sap"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
mem-server = { path = "../mem-server" }
spa-cfg = { path = "../spa-cfg" }
spa-loader = { path = "../spa-loader" }

color-eyre = { workspace = true }
envfury = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xitca-web = { workspace = true, features = ["http1"] }

[target.'cfg(target_os = "linux")'.dependencies]
xitca-web = { workspace = true, features = ["http1", "io-uring"] }
