[package]
name = "sap"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
spa-cfg-html = { path = "../spa-cfg-html" }
spa-cfg-json = { path = "../spa-cfg-json" }
spa-loader = { path = "../spa-loader" }
xitca-mem-server = { path = "../xitca-mem-server" }
yaml-headers = { path = "../yaml-headers" }

color-eyre = { workspace = true }
envfury = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xitca-web = { workspace = true, features = ["http1"] }

[target.'cfg(target_os = "linux")'.dependencies]
xitca-web = { workspace = true, features = ["http1", "io-uring"] }

[dev-dependencies]
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "time"] }
