[package]
name = "spa-loader"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
mem-server = { path = "../mem-server" }

bytes = { workspace = true }
http = { workspace = true }
mr-mime = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
