[package]
name = "spa-loader"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
content-type = { path = "../content-type" }
mem-server = { path = "../mem-server" }
spa-cfg-html = { path = "../spa-cfg-html" }
spa-cfg-json = { path = "../spa-cfg-json" }

http = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
